clusters/home/apps/filebrowser/00namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: filebrowser
  labels:
    app: filebrowser
