clusters/home/apps/filebrowser/filebrowser-app.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: filebrowser
  namespace: filebrowser
  labels:
    app: filebrowser
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: filebrowser
  template:
    metadata:
      labels:
        app: filebrowser
    spec:
      securityContext:
        fsGroup: 1000
      containers:
        - name: filebrowser
          image: filebrowser/filebrowser:v2.63.23
          args:
            - --username
            - "$(FB_USERNAME)"
          ports:
            - containerPort: 80
          volumeMounts:
            - name: data-files
              mountPath: /srv
            - name: database-vol
              mountPath: /database
            - name: config
              mountPath: /config/settings.json
              subPath: settings.json
      volumes:
        - name: data-files
          persistentVolumeClaim:
            claimName: filebrowser-data-pvc
        - name: database-vol
          persistentVolumeClaim:
            claimName: filebrowser-db-pvc
        - name: config
          configMap:
            name: filebrowser-settings
---
apiVersion: v1
kind: Service
metadata:
  name: filebrowser-service
  namespace: filebrowser
spec:
  selector:
    app: filebrowser
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
